<resources>
    <string name="app_name">Grocer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Regex-->
    <string name="regex_phone_india">\\+91\\s\\d{10}$</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_auth">AuthActivity</string>

    <!--Authentication -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="bye_bye">Bye Bye</string>
    <string name="long_lines">Looooong\nlines</string>
    <string name="terms_and_condition">By going ahead you agree to the &lt;u&gt;Terms and Conditions&lt;/u&gt; of Grocer.</string>
    <string name="proceed">Proceed</string>
    <string name="country_code_prefix">+91&#160;</string>
    <string name="auth_phone_phone_label">AuthPhoneFragment</string>
    <string name="auth_phone_otp_label">AuthOtpFragment</string>
    <string name="auth_phone_error_blank">Mobile number cannot be empty</string>
    <string name="auth_phone_error_invalid">The given mobile number is invalid</string>
    <string name="hey">Hey,</string>
    <string name="one_step_away">you are one step \naway.</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="name">Full Name</string>

    <!-- Home Related fragments-->
    <string name="home_sops">Shops</string>
    <string name="home_orders">Orders</string>
    <string name="home_lists">Lists</string>
    <string name="home_profile">Profile</string>
    <string name="home_shop_heading">Choose a,\nGrocer store near you</string>
    <string name="fake_money">₹3,00,000.00</string>
    <string name="firebase_auth_no_network_connection">No network</string>
    <string name="firebase_auth_unknown_error">Developer error</string>
</resources>
